# robotiq

robotiq_2f_140_gripper_visualization/: CMakeLists.txt  package.xml
robotiq_2f_140_gripper_visualization/launch/: test_2f_140_model.launch.py
robotiq_2f_140_gripper_visualization/urdf/: robotiq_arg2f_140_model.ros2_control.xacro  robotiq_arg2f_140_model_macro.xacro
robotiq_2f_85_gripper_visualization/: CMakeLists.txt  package.xml
robotiq_2f_85_gripper_visualization/urdf/: robotiq_arg2f_85_model.ros2_control.xacro  robotiq_arg2f_85_model_macro.xacro
robotiq_3f_gripper_visualization/: CMakeLists.txt  package.xml
robotiq_3f_gripper_visualization/cfg/: robotiq-3f-gripper_articulated.urdf  robotiq-3f-gripper_finger_articulated_macro.xacro
